--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,4 +8,6 @@
 
 <ion-content padding>
   <button ion-button block (click)="test()">测试扫码(zbar)</button>
+  <button ion-button block (click)="vi()">震动</button>
+  <button ion-button block (click)="toas()">toast</button>
 </ion-content>
